# gst-fpscounter

./: README  README.md  configure.ac  meson.build
src/: Makefile.am  gstfpscounter.c  gstfpscounter.h
